# lubed

./: .gitignore  README.org  config.toml  example.json  pyproject.toml
.github/workflows/: build.yml
src/bundle_dep_notifier/: __init__.py  cli.py  collect.py  obs.py
src/lubed/: __init__.py  cli.py  config.py  config.toml  core.py  gh.py  git.py  obs.py
tests/: test_collect.py  test_config.py  test_gh.py  test_obs.py
