[tool.poetry]
name = "lubed"
version = "0.1.0"
description = ""
authors = ["Alexander Graul <agraul@suse.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
lubed ="lubed.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
tomli = "^2.0.1"
click = "^8.1.3"
rich = "^12.4.4"
PyGithub = "^1.55"
osc = "^0.167.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.1"
isort = "^5.10.1"
ipdb = "^0.13.9"
pytest-mock = "^3.6.1"
black = "^22.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.pyright]
include = ["src"]
