[project]
name = "lubed"
version = "1.0"
description = "List Updates in Salt Bundle Dependencies"
authors = [{ name = "Alexander Graul", email = "agraul@suse.com" }]
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "requests>=2.26.0,<3",
    "tomli>=2.0.1,<3",
    "click>=8.1.3,<9",
    "rich>=12.4.4,<13",
    "PyGithub~=1.55",
    "gql[all]>=3.5.0,<4",
]

[project.scripts]
lubed = "lubed.cli:cli"

[dependency-groups]
dev = [
    "pytest>=6.2.5,<7",
    "pylint>=2.12.1,<3",
    "isort>=5.10.1,<6",
    "pytest-mock>=3.6.1,<4",
    "black>=22.3.0,<23",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src"]
